--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-
-    <html lang="en">
+{% load static %}
+<html lang="pl">
 
         <head>
             <meta charset="UTF-8">
             <title>Cluster</title>
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+            <link rel="stylesheet" href="{% static 'css/blog.css' % }">
         </head>
 <body>
     <div>
@@ -14,14 +15,13 @@
         <h4>Wszelkie prawa zastrzezone</h4>
     </div>
     
-       {% for post in posts %}
+    {% for post in posts %}
     <div>
         <h2><a href="">{{ post.title}}</a></h2>
         <em> {{ post.text|linebreaksbr }}</em>
         <p>opublikowano: {{ post.publish_date }}</p>
     </div>
-        {% endfor %}
-        
+    {% endfor %}
     <div>
     
     </div>
