--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,20 +1,20 @@
 h1 a,h2 a{
-    color: #DE781F;
+    color: #664d66;
 } 
 
 body {
-    padding-left: 15px;
+    padding-left: 0px;
 }
 
 .page-header{
-    background-color: #C25100;
+    background-color: #96dbcac9;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 5px 5px 5px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: darksalmon;
-    font-size: 36pt;
+    color: #664d66;
+    font-size: 34pt;
     text-decoration: none;
 }
 
