--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,30 +1,12 @@
-{% load static %}
-    <html lang="pl">
-
-        <head>
-            <meta charset="UTF-8">
-            <title>Cluster</title>
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        </head>
-<body>
-    <div class="page-header">
-        <h1>Witaj w Cluster!</h1>
-        <h2>Cluster</h2>
-    </div>
-    
+{% extends 'blog/base.html' %}
+{% block content %}
     {% for post in posts %}
     <div class="post">
-        <h2><a href="">{{ post.title}}</a></h2>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title}}</a></h2>
         <em> {{ post.text|linebreaksbr }}</em>
-        <div class="data">
-            <p>opublikowano: {{ post.publish_date }}</p>
-        </div>
+            <div class="data">
+                <p>opublikowano: {{ post.publish_date }}</p>
+            </div>
     </div>
     {% endfor %}
-    <div class="stopka">
-    
-    </div>
-</body>
-
-</html>   
+{% endblock %}
