--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 h1 a,h2 a{
-    color: #664d66;
+    color: #401c55;
 } 
 
 body {
@@ -7,13 +7,13 @@ body {
 }
 
 .page-header{
-    background-color: #96dbcac9;
+    background-color: #2d6930;
     margin-top: 0;
     padding: 5px 5px 5px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #664d66;
+    color: #ffffff;
     font-size: 34pt;
     text-decoration: none;
 }
