--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,6 +8,10 @@
         </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
+        {% if post.image %}
+        <img src="{{ post.image.url }}" width="100px" />
+        {% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
+
     </div>
 {% endblock %}
