--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,8 +1,13 @@
 {% extends 'blog/base.html' %}
+
 {% block content %}
     {% for post in posts %}
     <div class="post">
-        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title}}</a></h2>
+        <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+        {% if post.image %}
+        <img src="{{ post.image.url }}" width="100px" />
+        {% endif %}
+
         <em> {{ post.text|linebreaksbr }}</em>
             <div class="data">
                 <p>opublikowano: {{ post.publish_date }}</p>
