--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,13 +3,16 @@
 {% block content %}
     <div class="post">
         {% if post.publish_date %}
-        <div class="date">
+            <div class="date">
             {{ post.publish_date }}
         </div>
         {% endif %}
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h2>{{ post.title }}</h2>
         {% if post.image %}
-        <img src="{{ post.image.url }}" width="100px" />
+            <img src="{{ post.image.url }}" width="100px" />
         {% endif %}
         <p>{{ post.text|linebreaksbr }}</p>
 
